# monitorctl

./: README.md  pyproject.toml
monitorctl/: config.py  hypr_v1.py  main.py  program.py  waybar.py
