[tool.poetry]
name = "monitorctl"
version = "0.1.0"
description = ""
authors = ["vellei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
pydantic = "^2.10.6"
structlog = "^25.1.0"

[tool.poetry.scripts]
monitorctl = "monitorctl.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
